Grace/tests/gibbs/errors/t106.grace
// ERROR = P1001
method empty {
